'chat_between_browsers'

--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -10,5 +10,8 @@ html(lang="en")
         header 
             h1 Xoom
         main 
-            h2 Welcome to Xoom 
+            ul 
+            form
+                input(type="text" placeholder="Write a Message" required) 
+                button  Send
         script(src="/public/js/app.js") 
