--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -10,11 +10,16 @@ html(lang="en")
         header 
             h1 Xoom
         main 
-            form#nick
-                input(type="text" placeholder="Choose a nickname" required)
-                button Save
-            ul 
-            form#msg
-                input(type="text" placeholder="Write a Message" required) 
-                button  Send
+            div#welcome
+                form
+                    input(placeholder="room name", required, type="text")
+                    button Enter Room 
+
+            div#room
+                h3
+                ul 
+                form
+                    input(placeholder="Enter message", required, type="text")
+                    button Send 
+        script(src="/socket.io/socket.io.js")     
         script(src="/public/js/app.js") 
