--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -18,7 +18,10 @@ html(lang="en")
             div#room
                 h3
                 ul 
-                form
+                form#name
+                    input(type="text", placeholder="type your name" required)
+                    button Submit 
+                form#msg
                     input(placeholder="Enter message", required, type="text")
                     button Send 
         script(src="/socket.io/socket.io.js")     
